fix citations not wrapping

--- a/css/citations.css
+++ b/css/citations.css
@@ -5,3 +5,7 @@
 	top: 9%;
 	left: 10%;
 }
+
+.center_div {
+	flex-wrap: wrap;
+}
